--- a/06.cycles copy/index.html
+++ b/06.cycles copy/index.html
@@ -108,11 +108,16 @@
 
 
     <!-- 14 -->
-    <button class="b-14">жмяк</button>
+    <!-- <button class="b-14">жмяк</button>
     <input type="radio" name="b14" class="i-14">
     <input type="radio" name="b14" class="i-14">
     <input type="radio" name="b14" class="i-14">
-    <div class="out-14"></div>
+    <div class="out-14"></div> -->
+
+
+    <!-- 15 -->
+    <button class="b-15">жмяк</button>
+    <div class="out-15"></div>
     
 
 
