дошёл до функций

--- a/05.work with forms/index.html
+++ b/05.work with forms/index.html
@@ -50,11 +50,11 @@
 
 
   <!-- 4 переключатель языка -->
-  <div class="container">
+  <!-- <div class="container">
     <input type="checkbox" id="cb">
     <div class="en">en</div>
     <div class="out">Здравствуй, Дарья!</div>
-  </div>
+  </div> -->
 
 
   <!-- 5 -->
