continued nested loops

--- a/08.function/index.html
+++ b/08.function/index.html
@@ -31,16 +31,30 @@
 
 
     <!-- 4 -->
-    <button class="btn">жмяк</button>
+    <!-- <button class="btn">жмяк</button>
     <div class="out"></div>
     <style>
+      .btn{
+        display: block;
+        background: #ffffff;
+        width: 100px;
+        height: 100px;
+        border: 1px solid #da77d1;
+        font-size: 30px;
+        color: #08b5cc;
+      }
         .out{
+          box-sizing: border-box;
             background:#f075bc;
             display: inline-block;
+            text-align: center;
+            padding-top: 50px;
             width: 300px;
             height: 300px;
+            font-size: 50px;
+            color: #ffffff;
         }
-    </style>
+    </style> -->
     
 
 
