--- a/09.while, do while/index.html
+++ b/09.while, do while/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
+  <button class="btn">Жмяк</button>
   <div class="out"></div>
+  <input type="text" class="inp">
+  <input type="text" class="inp-1">
 
 
   <div class="wrapper">
