--- a/09.while, do while/index.html
+++ b/09.while, do while/index.html
@@ -11,8 +11,8 @@
 <body>
   <button class="btn">Жмяк</button>
   <div class="out"></div>
-  <input type="text" class="inp">
-  <input type="text" class="inp-1">
+  <!-- <input type="text" class="inp">
+  <input type="text" class="inp-1"> -->
 
 
   <div class="wrapper">
