--- a/09.while, do while/index.html
+++ b/09.while, do while/index.html
@@ -14,6 +14,23 @@
   <!-- <input type="text" class="inp">
   <input type="text" class="inp-1"> -->
 
+  <!-- <div class="div-11">one</div>
+  <div class="div-11">3</div>
+  <div class="div-11">4</div>
+  <div class="div-11">two</div> -->
+
+  <!-- <input type="text" class="i-13">
+  <input type="text" class="i-13">
+  <input type="text" class="i-13">
+  <input type="text" class="i-13">
+  <input type="text" class="i-13"> -->
+
+  <!-- <input type="radio" name = "i-13" class="i-13">
+  <input type="radio" name = "i-13" class="i-13">
+  <input type="radio" name = "i-13" class="i-13">
+  <input type="radio" name = "i-13" class="i-13">
+  <input type="radio" name = "i-13" class="i-13"> -->
+
 
   <div class="wrapper">
     <div class="block block-1">
