continue work with DOM

--- a/10.work with DOM/index.html
+++ b/10.work with DOM/index.html
@@ -5,22 +5,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>while do while</title>
+  <title>Work with DOM</title>
 </head>
 
 <body>
   <!-- --------------------------------------------------------------------------------- -->
-  <p class="lessons-code">Код урока</p>
-  <div class="one">Привет</div>
+  <!-- <p class="lessons-code">Код урока</p>
+  <div class="one" data="hello">Привет</div>
   <button class="btn-lesson">Жмяк</button>
+  <hr> -->
+
+  <!-- атрибуты -->
+
+  <!-- <div class="gasoline-counter-wrapper">
+    <p class="counter-title">Счётчик бензина</p>
+    <div class="result"></div>
+    <input type="text" class="litres">
+
+    <button class="brand" data="32">АИ-92</button>
+    <button class="brand" data="35">АИ-95</button>
+    <button class="brand" data="37">АИ-98</button>
+  </div>
+
   <p class="lessons-code-end">Конец кода урока</p>
   <hr>
-  <!---------------------------------------------------------------------------------------->
+  <div class="element-wrapper">
 
+  </div>
 
 
   <button class="btn">Жмяк</button>
-  <div class="out"></div>
+  <div class="out"></div> -->
+
+  <!-- Задания--------------------------------- -->
+  <div class="container">
+    <batton class="btn">
+      Жмяк
+    </batton>
+    <div class="out out-1 bg-4">
+
+    </div>
+    <p>Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+    <p class="south">Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+    <p>Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+    <p>Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+    <p class="south">Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+    <p>Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+    <p>Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+    <p class="south">Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+    <p>Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+    <p class="south">Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+  </div>
 
 
 
@@ -28,7 +63,7 @@
 
 
 
-  <div class="wrapper">
+  <!-- <div class="wrapper">
     <div class="block block-1">
       <div class="block__item block__item-1">
 
@@ -54,7 +89,7 @@
 
       </div>
     </div>
-  </div>
+  </div> -->
 
 
   <script src="script.js"></script>
