finished work with DOM

--- a/10.work with DOM/index.html
+++ b/10.work with DOM/index.html
@@ -45,7 +45,7 @@
     <div class="out out-1 bg-4">
 
     </div>
-    <p>Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
+    <p class="south">Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
     <p class="south">Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
     <p>Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
     <p>Хочу шагать пьяный под звёздами. А звёзды чтоб южные</p>
