--- a/arrays/index.html
+++ b/arrays/index.html
@@ -13,6 +13,7 @@
   <!-- <p class="lessons-code">Код урока</p>-->
   <button class="btn">Жмяк</button>
   <div class="out"></div>
+  <div class="out-1"></div>
 
 
 
