continue work with API js

--- a/work-with-api-javascript/app/index.html
+++ b/work-with-api-javascript/app/index.html
@@ -30,6 +30,8 @@
                 <ul class="features">
                     <li>Feature 1</li>
                 </ul>
+                <p>Ветер</p>
+                <p class="wind"></p>
                 <button class="button-primary">Go</button>
             </div>
         </div>
