--- a/16. Set/unit_15.html
+++ b/16. Set/unit_15.html
@@ -81,6 +81,7 @@
             <p><b>Task 8.</b></p>
             <p>При нажатии b-8 выполняете функцию f8. Функция должна перебрать набор s8 и добавить в массив ar8 только числа больше 5. Выведите массив в консоль.</p>
             <button class="button-primary b-8">Task-8</button>
+            <div class="out-8"></div>
         </section>
 
         <section>
@@ -89,7 +90,7 @@
             в строку, причем после каждого символа строки должен быть пробел. Функция должна возвращать результирующую строку.</p>
             <p>В нашем примере результат должен быть 9_8_7_6_5_ (нижнее подчеркивание символизирует пробел)</p>
             <button class="button-primary b-9">Task-9</button>
-            <div class="out-9"></div>
+            <div class="out-9">ghbdtn</div>
         </section>
 
         <section>
