--- a/18. map, filter .1/unit_17.html
+++ b/18. map, filter .1/unit_17.html
@@ -7,10 +7,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://itgid.info/css/mustard-ui.min.css">
     <link rel="stylesheet" href="https://itgid.info/css/js_2_0.css">
+    <link rel="stylesheet" href="style.css">
     <title>Unit 17</title>
 </head>
 
 <body>
+    <div class="wrapper">
+        <div class="wordewrapper">
+        <div class="word">Hello</div>
+        <div class="word">Calculator</div>
+        <div class="word">Lamp</div>
+        <div class="word">Square</div>
+        <div class="word">Circle</div>
+      </div>
+      <div class="inp-wrapper">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+      </div>
+      </div>
+      
+      <button class="btn">Жмяк</button>
 <div class="container">
     <h1>Unit 17. Методы массивов: map, filter</h1>
     <h2><a href="https://itgid.info">ItGid.info</a></h2>
