continue map, filter

--- a/18. map, filter .1/unit_17.html
+++ b/18. map, filter .1/unit_17.html
@@ -21,11 +21,11 @@
         <div class="word">Circle</div>
       </div>
       <div class="inp-wrapper">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
+        <input type="text" class="inp">
+        <input type="text" class="inp">
+        <input type="text" class="inp">
+        <input type="text" class="inp">
+        <input type="text" class="inp">
       </div>
       </div>
       
