continue map, filter

--- a/work-with-api-javascript/app/index.html
+++ b/work-with-api-javascript/app/index.html
@@ -32,6 +32,8 @@
                 </ul>
                 <p>Ветер</p>
                 <p class="wind"></p>
+                <p>Давление</p>
+                <p class="pressure"></p>
                 <button class="button-primary">Go</button>
             </div>
         </div>
