continue mouse events

--- a/20.mouse events/unit_19.html
+++ b/20.mouse events/unit_19.html
@@ -14,6 +14,8 @@
     <div class="container">
         <button class="btn">Жмяк</button>
         <button class="btn-1">Жмяк</button>
+        <button class="btn-2">Жмяк</button>
+        <button class="btn-3">Жмяк</button>
         <h1>Unit 19. События мыши</h1>
 
         <section>
