continue mouse events

--- a/20.mouse events/unit_19.html
+++ b/20.mouse events/unit_19.html
@@ -16,6 +16,7 @@
         <button class="btn-1">Жмяк</button>
         <button class="btn-2">Жмяк</button>
         <button class="btn-3">Жмяк</button>
+        <button class="btn-4">Жмяк4</button>
         <h1>Unit 19. События мыши</h1>
 
         <section>
@@ -44,6 +45,10 @@
             <div class="block div-3">task-3</div>
             <div class="out-3">
             </div>
+            <button class="up">up</button>
+            <button class="down">down</button>
+            <button class="right">right</button>
+            <button class="left">left</button>
         </section>
 
         <section>
