finish mouse events

--- a/20.mouse events/unit_19.html
+++ b/20.mouse events/unit_19.html
@@ -263,10 +263,13 @@
             <p> Дан элемент progress. Напишите фукнцию t20 которая увеличивает его value на 1 при каждом событии
                 mousemove внутри progress.
             </p>
+            <div class="div-20">
+                task 20
+            </div>
             <progress max="100" value="10">
                 Загружено на <span id="value">25</span>%
             </progress>
-            <div class="out-19">
+            <div class="out-20">
             </div>
         </section>
 
