--- a/21.keyboard events/unit_20/unit_20.html
+++ b/21.keyboard events/unit_20/unit_20.html
@@ -128,11 +128,90 @@
             <p>4. Ограничения проекта – тестируются только указанные клавиши в латинской раскладке. Комбинации клавиш не тестируются.
             Т.е. нажиматься shift+A, ctrl+shift – не будут. Все символы вводятся в нижнем регистре.</p>
 
-            <div>
+         
 
                 <input type="text" class="i-11">
                 <div class="out-11">
                 </div>
+            <div class="keyboard">
+                <div class="keyboard__row keyboard__row-1">
+                    <div class="keyboard__btn">`</div>
+                    <div class="keyboard__btn">1</div>
+                    <div class="keyboard__btn">2</div>
+                    <div class="keyboard__btn">3</div>
+                    <div class="keyboard__btn">4</div>
+                    <div class="keyboard__btn">5</div>
+                    <div class="keyboard__btn">6</div>
+                    <div class="keyboard__btn">7</div>
+                    <div class="keyboard__btn">8</div>
+                    <div class="keyboard__btn">9</div>
+                    <div class="keyboard__btn">0</div>
+                    <div class="keyboard__btn">-</div>
+                    <div class="keyboard__btn">=</div>
+                    <div class="keyboard__btn btn-min">Backspace</div>
+                </div>
+                <div class="keyboard__row keyboard__row-2">
+                    <div class="keyboard__btn btn-min">Tab</div>
+                    <div class="keyboard__btn">q</div>
+                    <div class="keyboard__btn">w</div>
+                    <div class="keyboard__btn">e</div>
+                    <div class="keyboard__btn">r</div>
+                    <div class="keyboard__btn">t</div>
+                    <div class="keyboard__btn">y</div>
+                    <div class="keyboard__btn">u</div>
+                    <div class="keyboard__btn">i</div>
+                    <div class="keyboard__btn">o</div>
+                    <div class="keyboard__btn">p</div>
+                    <div class="keyboard__btn">[</div>
+                    <div class="keyboard__btn">]</div>
+                    <div class="keyboard__btn btn-min">Enter</div>
+                </div>
+                <div class="keyboard__row keyboard__row-3">
+                    <div class="keyboard__btn btn-min">Caps Lock</div>
+                    <div class="keyboard__btn">a</div>
+                    <div class="keyboard__btn">s</div>
+                    <div class="keyboard__btn">d</div>
+                    <div class="keyboard__btn">f</div>
+                    <div class="keyboard__btn">g</div>
+                    <div class="keyboard__btn">h</div>
+                    <div class="keyboard__btn">j</div>
+                    <div class="keyboard__btn">k</div>
+                    <div class="keyboard__btn">l</div>
+                    <div class="keyboard__btn">;</div>
+                    <div class="keyboard__btn">'</div>
+                    <div class="keyboard__btn">\</div>
+                </div>
+                <div class="keyboard__row keyboard__row-4">
+                    <div class="keyboard__btn btn-min shift">Shift</div>
+                    <div class="keyboard__btn">z</div>
+                    <div class="keyboard__btn">x</div>
+                    <div class="keyboard__btn">c</div>
+                    <div class="keyboard__btn">v</div>
+                    <div class="keyboard__btn">b</div>
+                    <div class="keyboard__btn">n</div>
+                    <div class="keyboard__btn">m</div>
+                    <div class="keyboard__btn">,</div>
+                    <div class="keyboard__btn">.</div>
+                    <div class="keyboard__btn">/</div>
+                    <div class="keyboard__btn btn-min shift">Shift</div>
+                </div>
+                <div class="keyboard__row keyboard__row-5">
+                    <div class="keyboard__btn btn-min">Ctrl</div>
+                    <div class="keyboard__btn btn-min">Win</div>
+                    <div class="keyboard__btn btn-min">Alt</div>
+                    <div class="keyboard__btn space">Space</div>
+                    <div class="keyboard__btn btn-min">Alt Gr</div>
+                    <div class="keyboard__btn btn-min">Win</div>
+                    <div class="keyboard__btn btn-min">Спис</div>
+                    <div class="keyboard__btn btn-min">Ctrl</div>
+                </div>
+                <div class="arrows">
+                    <div class="arrows__left"></div>
+                    <div class="arrows__right"></div>
+                    <div class="arrows__up"></div>
+                    <div class="arrows__down"></div>
+                </div>
+            </div>    
         </section>
 
 
