continue touch events, addEventListener

--- a/20.mouse events/unit_19.html
+++ b/20.mouse events/unit_19.html
@@ -11,6 +11,166 @@
 </head>
 
 <body>
+    <div class="gear-wrapper">
+        <svg class="gear-1" data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 945.11 941.2">
+            <defs>
+                <style>
+                    .cls-11 {
+                        fill: #0ad3e8;
+                    }
+
+                    .cls-2 {
+                        fill: none;
+                    }
+
+                    .cls-2,
+                    .cls-3 {
+                        stroke: #871212;
+                        stroke-miterlimit: 10;
+                    }
+
+                    .cls-3 {
+                        fill: #222323;
+                    }
+                </style>
+            </defs>
+            <title>шестерня1</title>
+            <path class="cls-11"
+                d="M1078.56,405.45l76.9-14.18-2.4-47.81-77-7.55A394.2,394.2,0,0,0,1061.82,269l.07,0,67.39-39.63-18.6-44.1-75.07,19.24a396.15,396.15,0,0,0-36.16-57.6l49.91-60.46-32.57-35.09-64,43.82a397.29,397.29,0,0,0-53.42-41.76l26.27-74.09L883-42.55l-45.2,63.12A393.63,393.63,0,0,0,772.69-.57l-.62-78.37-47.5-5.94L703.69-10.16q-10.05-.51-20.21-.51a400.6,400.6,0,0,0-48.15,2.9L608-81,561.32-70.39l5.9,77.08a392.81,392.81,0,0,0-63.53,25.77l-50.8-59.61-40.2,26,32,70.66a398.08,398.08,0,0,0-50.89,46L325.55,76.79,296.66,115,351,170.44A395.21,395.21,0,0,0,319,231l-77.24-13-14.09,45.75,70,33.56a395.28,395.28,0,0,0-9.29,68.45L211.4,379.91l2.4,47.81,77.25,7.6a393.56,393.56,0,0,0,14.64,67.38l-67.43,39.64,18.61,44.11,75.36-19.32a395.11,395.11,0,0,0,36.68,57.74l-49.83,60.36,32.57,35.08,64.26-44a396.49,396.49,0,0,0,54.14,41.76l-26.17,73.73,42.61,21.82,45.29-63.22a393.86,393.86,0,0,0,65.33,20.67l.62,78.2,47.5,5.94,21-75.05q8.58.36,17.25.36A399.36,399.36,0,0,0,734,777.35l27.33,73.28L808,840l-5.93-77.5a393.1,393.1,0,0,0,62.61-25.76l50.73,59.55,40.2-26-32.1-70.84a398.27,398.27,0,0,0,50.3-45.77l68,38.55L1070.73,654l-54.27-55.41A394.2,394.2,0,0,0,1048,538.86l77.13,13,14.1-45.75-69.91-33.51A395.2,395.2,0,0,0,1078.56,405.45ZM497.72,194.21l42.62,55.88A197.45,197.45,0,0,0,495.64,328L425.88,318A268.3,268.3,0,0,1,497.72,194.21Zm-44.05,327A267.28,267.28,0,0,1,417.19,386c0-1.33,0-2.65,0-4l70.3,10a196.42,196.42,0,0,0,23,85.5ZM616.21,645.46a268.31,268.31,0,0,1-122.8-72.06l57.06-43.93a197.3,197.3,0,0,0,75.6,43.93ZM592.14,210.25l-42.82-55.67a267.37,267.37,0,0,1,136.45-37.19c1.08,0,2.16,0,3.23,0L679,187.2A196.57,196.57,0,0,0,592.14,210.25Zm93.63,444.3c-1.7,0-3.41,0-5.11,0l10-72.24a196.75,196.75,0,0,0,85.78-22.32l45.19,57.74A267.33,267.33,0,0,1,685.77,654.55ZM743.45,195.9l9.41-70.07a268.39,268.39,0,0,1,125.79,73.23l-57,43A197.45,197.45,0,0,0,743.45,195.9ZM873.13,578.42l-44.44-58a197.5,197.5,0,0,0,44.45-75l72.09,10.27A268.43,268.43,0,0,1,873.13,578.42Zm81.2-188.77-71.77-9.32a196.67,196.67,0,0,0-22.07-86.55l58-42A267.34,267.34,0,0,1,954.36,386C954.36,387.2,954.35,388.43,954.33,389.65Z"
+                transform="translate(-210.88 85.42)" />
+            <path class="cls-2"
+                d="M1078.56,405.45l76.9-14.18-2.4-47.81-77-7.55A394.2,394.2,0,0,0,1061.82,269l.07,0,67.39-39.63-18.6-44.1-75.07,19.24a396.15,396.15,0,0,0-36.16-57.6l49.91-60.46-32.57-35.09-64,43.82a397.29,397.29,0,0,0-53.42-41.76l26.27-74.09L883-42.55l-45.2,63.12A393.63,393.63,0,0,0,772.69-.57l-.62-78.37-47.5-5.94L703.69-10.16q-10.05-.51-20.21-.51a400.6,400.6,0,0,0-48.15,2.9L608-81,561.32-70.39l5.9,77.08a392.81,392.81,0,0,0-63.53,25.77l-50.8-59.61-40.2,26,32,70.66a398.08,398.08,0,0,0-50.89,46L325.55,76.79,296.66,115,351,170.44A395.21,395.21,0,0,0,319,231l-77.24-13-14.09,45.75,70,33.56a395.28,395.28,0,0,0-9.29,68.45L211.4,379.91l2.4,47.81,77.25,7.6a393.56,393.56,0,0,0,14.64,67.38l-67.43,39.64,18.61,44.11,75.36-19.32a395.11,395.11,0,0,0,36.68,57.74l-49.83,60.36,32.57,35.08,64.26-44a396.49,396.49,0,0,0,54.14,41.76l-26.17,73.73,42.61,21.82,45.29-63.22a393.86,393.86,0,0,0,65.33,20.67l.62,78.2,47.5,5.94,21-75.05q8.58.36,17.25.36A399.36,399.36,0,0,0,734,777.35l27.33,73.28L808,840l-5.93-77.5a393.1,393.1,0,0,0,62.61-25.76l50.73,59.55,40.2-26-32.1-70.84a398.27,398.27,0,0,0,50.3-45.77l68,38.55L1070.73,654l-54.27-55.41A394.2,394.2,0,0,0,1048,538.86l77.13,13,14.1-45.75-69.91-33.51A395.2,395.2,0,0,0,1078.56,405.45ZM497.72,194.21l42.62,55.88A197.45,197.45,0,0,0,495.64,328L425.88,318A268.3,268.3,0,0,1,497.72,194.21Zm-44.05,327A267.28,267.28,0,0,1,417.19,386c0-1.33,0-2.65,0-4l70.3,10a196.42,196.42,0,0,0,23,85.5ZM616.21,645.46a268.31,268.31,0,0,1-122.8-72.06l57.06-43.93a197.3,197.3,0,0,0,75.6,43.93ZM592.14,210.25l-42.82-55.67a267.37,267.37,0,0,1,136.45-37.19c1.08,0,2.16,0,3.23,0L679,187.2A196.57,196.57,0,0,0,592.14,210.25Zm93.63,444.3c-1.7,0-3.41,0-5.11,0l10-72.24a196.75,196.75,0,0,0,85.78-22.32l45.19,57.74A267.33,267.33,0,0,1,685.77,654.55ZM743.45,195.9l9.41-70.07a268.39,268.39,0,0,1,125.79,73.23l-57,43A197.45,197.45,0,0,0,743.45,195.9ZM873.13,578.42l-44.44-58a197.5,197.5,0,0,0,44.45-75l72.09,10.27A268.43,268.43,0,0,1,873.13,578.42Zm81.2-188.77-71.77-9.32a196.67,196.67,0,0,0-22.07-86.55l58-42A267.34,267.34,0,0,1,954.36,386C954.36,387.2,954.35,388.43,954.33,389.65Z"
+                transform="translate(-210.88 85.42)" />
+            <rect class="cls-3" x="440.78" y="322.08" width="66.69" height="19.28" />
+            <circle class="cls-3" cx="474.12" cy="470.15" r="133" />
+        </svg>
+        <svg class="gear gear-2" data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 678.81 682.66">
+            <defs>
+                <style>
+                    .cls-1 {
+                        fill: #14efc5;
+                    }
+
+                    .cls-2 {
+                        fill: none;
+                    }
+
+                    .cls-2,
+                    .cls-3,
+                    .cls-4 {
+                        stroke: #871212;
+                        stroke-miterlimit: 10;
+                    }
+
+                    .cls-3 {
+                        fill: #222323;
+                    }
+
+                    .cls-4 {
+                        fill: #233330;
+                    }
+                </style>
+            </defs>
+            <title>gear-2</title>
+            <path class="cls-1"
+                d="M968.18,362h.05L1022,344.42l-6.31-34-56,2A286.44,286.44,0,0,0,943,266.09l44.61-35L970.08,201.3l-52,21a287.61,287.61,0,0,0-31.26-37.76l30-48.25-26.7-22-41.69,37.57a284.53,284.53,0,0,0-42.72-25l11.69-55.44L784.81,59.89,758.5,109.42q-7-1.92-14.19-3.49a287.24,287.24,0,0,0-34.46-5.41l-8-56-34.6.31-7.77,55.35a283.38,283.38,0,0,0-48.85,8.35L584,58.58,551.62,70.71l11.66,54.85a288.2,288.2,0,0,0-43.06,24.61L478,112.27,451.7,134.75l29.79,47.59a285.74,285.74,0,0,0-32,37.78L397,199l-17,30.12,44.23,34.53A287,287,0,0,0,407,310.54l-56.52-1.89-5.71,34.13,53.38,17.33a284.17,284.17,0,0,0-.09,49.84l-53.76,17.56,6.31,34,56.21-2a287.1,287.1,0,0,0,17,46.45l-44.53,34.91,17.57,29.81L449,549.63a287.49,287.49,0,0,0,31.77,37.87l-29.89,48,26.7,22,41.78-37.64a282.63,282.63,0,0,0,42.93,24.72l-11.67,55.32,32.63,11.54,26.44-49.74q6,1.57,12.12,2.93A288.52,288.52,0,0,0,658,670.21l7.95,56,34.61-.31,7.81-55.64a284,284,0,0,0,48.2-8.5l26.6,49.91,32.42-12.13-11.71-55A287.71,287.71,0,0,0,846.47,620l42.07,37.75,26.31-22.48-29.74-47.53a285.26,285.26,0,0,0,31.54-37.32l52.46,21.1,17-30.12L942,506.91a285.85,285.85,0,0,0,16.9-46l56.5,1.89,5.71-34.13-53.2-17.25A285,285,0,0,0,968.18,362ZM660.55,144.19l0,102.53a139.64,139.64,0,0,0-59.92,25l-72.4-72.58A241.07,241.07,0,0,1,660.55,144.19ZM496.78,231.68l72.54,72.46a139.67,139.67,0,0,0-24.73,60L442.07,364A241.15,241.15,0,0,1,496.78,231.68ZM497,541.24c-30.62-36.39-49.86-83.18-54.75-133.23l102.53-.6c3.69,22.11,11.07,43.95,23.8,61.27ZM528.53,574l71.66-73.33c18.32,12.92,39,23.07,60.3,26.2l1,100.37A241.08,241.08,0,0,1,528.53,574ZM872,231.65c30.58,36.43,47.68,80.29,52.52,130.34l-99.57,2.19a139.75,139.75,0,0,0-25.21-59.81Zm-166.1-87.17a241.19,241.19,0,0,1,132.39,54.65L765.84,271.7a139.74,139.74,0,0,0-60-24.7Zm.28,485.17-.35-102.54A139.63,139.63,0,0,0,765.66,502l72.62,72.36A241.14,241.14,0,0,1,706.16,629.65ZM871,540l-70.9-72a139.66,139.66,0,0,0,24.25-60.21l101.12,2.76C921.51,458,902.83,501.06,871,540Z"
+                transform="translate(-343.72 -44.03)" />
+            <path class="cls-2"
+                d="M968.18,362h.05L1022,344.42l-6.31-34-56,2A286.44,286.44,0,0,0,943,266.09l44.61-35L970.08,201.3l-52,21a287.61,287.61,0,0,0-31.26-37.76l30-48.25-26.7-22-41.69,37.57a284.53,284.53,0,0,0-42.72-25l11.69-55.44L784.81,59.89,758.5,109.42q-7-1.92-14.19-3.49a287.24,287.24,0,0,0-34.46-5.41l-8-56-34.6.31-7.77,55.35a283.38,283.38,0,0,0-48.85,8.35L584,58.58,551.62,70.71l11.66,54.85a288.2,288.2,0,0,0-43.06,24.61L478,112.27,451.7,134.75l29.79,47.59a285.74,285.74,0,0,0-32,37.78L397,199l-17,30.12,44.23,34.53A287,287,0,0,0,407,310.54l-56.52-1.89-5.71,34.13,53.38,17.33a284.17,284.17,0,0,0-.09,49.84l-53.76,17.56,6.31,34,56.21-2a287.1,287.1,0,0,0,17,46.45l-44.53,34.91,17.57,29.81L449,549.63a287.49,287.49,0,0,0,31.77,37.87l-29.89,48,26.7,22,41.78-37.64a282.63,282.63,0,0,0,42.93,24.72l-11.67,55.32,32.63,11.54,26.44-49.74q6,1.57,12.12,2.93A288.52,288.52,0,0,0,658,670.21l7.95,56,34.61-.31,7.81-55.64a284,284,0,0,0,48.2-8.5l26.6,49.91,32.42-12.13-11.71-55A287.71,287.71,0,0,0,846.47,620l42.07,37.75,26.31-22.48-29.74-47.53a285.26,285.26,0,0,0,31.54-37.32l52.46,21.1,17-30.12L942,506.91a285.85,285.85,0,0,0,16.9-46l56.5,1.89,5.71-34.13-53.2-17.25A285,285,0,0,0,968.18,362ZM660.55,144.19l0,102.53a139.64,139.64,0,0,0-59.92,25l-72.4-72.58A241.07,241.07,0,0,1,660.55,144.19ZM496.78,231.68l72.54,72.46a139.67,139.67,0,0,0-24.73,60L442.07,364A241.15,241.15,0,0,1,496.78,231.68ZM497,541.24c-30.62-36.39-49.86-83.18-54.75-133.23l102.53-.6c3.69,22.11,11.07,43.95,23.8,61.27ZM528.53,574l71.66-73.33c18.32,12.92,39,23.07,60.3,26.2l1,100.37A241.08,241.08,0,0,1,528.53,574ZM872,231.65c30.58,36.43,47.68,80.29,52.52,130.34l-99.57,2.19a139.75,139.75,0,0,0-25.21-59.81Zm-166.1-87.17a241.19,241.19,0,0,1,132.39,54.65L765.84,271.7a139.74,139.74,0,0,0-60-24.7Zm.28,485.17-.35-102.54A139.63,139.63,0,0,0,765.66,502l72.62,72.36A241.14,241.14,0,0,1,706.16,629.65ZM871,540l-70.9-72a139.66,139.66,0,0,0,24.25-60.21l101.12,2.76C921.51,458,902.83,501.06,871,540Z"
+                transform="translate(-343.72 -44.03)" />
+            <rect class="cls-3" x="730.57" y="276.58" width="19.28" height="66.69"
+                transform="translate(-309.88 646.69) rotate(-51.05)" />
+            <circle class="cls-4" cx="336.37" cy="340.26" r="95.63" />
+        </svg>
+        <!-- <svg class="walking-gear" data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 636.56 636.41">
+            <defs>
+                <style>
+
+                    .cls-1,
+                    .cls-2,
+                    .cls-3,
+                    .cls-4 {
+                        stroke: #000;
+                        stroke-miterlimit: 10;
+                    }
+
+                     .cls-2 {
+                        fill: #fff800;
+                    } 
+
+                    .cls-3 {
+                        fill: #190406;
+                    }
+
+                    .cls-4 {
+                        fill: #38080a;
+                    }
+                </style>
+            </defs>
+            <title>шагающая шестерня диск</title>
+            <polygon class="cls-1"
+                points="197.14 24.82 216.14 70.7 318.36 0.95 318.36 50.44 439.74 25.16 420.8 70.89 542.97 93.6 507.97 128.6 611.78 196.67 566.05 215.61 635.61 318.2 586.12 318.2 611.4 439.59 565.67 420.64 543.12 542.65 508.12 507.65 440.38 611.21 421.36 565.28 318.34 635.46 318.34 585.96 196.64 611.38 215.68 565.39 93.86 542.37 128.86 507.37 24.63 439.43 70.36 420.48 0.94 317.81 50.6 317.81 25.24 196.52 71.15 215.52 94.09 93.61 129.19 128.7 197.14 24.82" />
+            <ellipse class="cls-2" cx="318.36" cy="317.88" rx="219" ry="219" />
+            <rect class="cls-3" x="296.51" y="254.87" width="43.54" height="10.01" />
+            <circle class="cls-4" cx="318.28" cy="318.2" r="57.58" />
+        </svg> -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1580.13 687.45">
+            <defs>
+                <style>
+                    .cls-1 {
+                        fill: #1096e8;
+                    }
+
+                    .cls-1,
+                    .cls-2,
+                    .cls-3,
+                    .cls-4,
+                    .cls-5,
+                    .cls-6,
+                    .cls-7 {
+                        stroke: #000;
+                        stroke-miterlimit: 10;
+                    }
+
+                    .cls-2 {
+                        fill: #bc0404;
+                    }
+
+                    .cls-3 {
+                        fill: #07720c;
+                    }
+
+                    .cls-4 {
+                        fill: #0a2b0b;
+                    }
+
+                    .cls-5 {
+                        fill: #fff800;
+                    }
+
+                    .cls-6 {
+                        fill: #190406;
+                    }
+
+                    .cls-7 {
+                        fill: #38080a;
+                    }
+                </style>
+            </defs>
+            <title>шагающая шестерня целиком</title>
+            <polygon class="cls-1"
+                points="0.65 59.07 1555.87 686.8 1567.68 657.59 1579.48 628.38 24.26 0.65 12.45 29.86 0.65 59.07" />
+            <polygon class="cls-2 walking-gear"
+                points="669.02 55.97 688.02 101.85 790.24 32.1 790.24 81.59 911.62 56.31 892.68 102.04 1014.85 124.75 979.85 159.75 1083.65 227.82 1037.92 246.76 1107.49 349.36 1057.99 349.36 1083.28 470.74 1037.55 451.79 1015 573.8 980 538.8 912.26 642.36 893.24 596.43 790.22 666.61 790.22 617.11 668.51 642.52 687.56 596.54 565.73 573.52 600.73 538.52 496.5 470.57 542.24 451.63 472.82 348.96 522.48 348.96 497.12 227.67 543.02 246.67 565.97 124.75 601.07 159.85 669.02 55.97" />
+            <polygon class="cls-3" points="469.41 92.74 420.83 92.91 473.36 348.21 521.93 348.05 469.41 92.74" />
+            <circle class="cls-4" cx="472.82" cy="221.12" r="12.66" />
+            <polygon class="cls-3" points="1107.65 350.06 1059.07 350.22 1111.6 605.52 1160.18 605.36 1107.65 350.06" />
+            <circle class="cls-4" cx="1107.49" cy="477.79" r="12.66" />
+            <ellipse class="cls-5" cx="790.24" cy="349.03" rx="219" ry="219" />
+            <rect class="cls-6" x="768.39" y="286.02" width="43.54" height="10.01" />
+            <circle class="cls-7" cx="790.16" cy="349.35" r="57.58" />
+        </svg>
+    </div>
     <div class="container">
         <button class="btn">Жмяк</button>
         <button class="btn-1">Жмяк</button>
