finish toush events

--- a/22. touch events/unit_21.html
+++ b/22. touch events/unit_21.html
@@ -12,7 +12,8 @@
 
 <body>
     <div class="true-js">
-        <h2 class="h2red" onclick="bgRed()">True.js События addEventListener</h2> <!--это самый древний способ повесить событие на элемент-->
+        <h2 class="h2red" onclick="bgRed()">True.js События addEventListener</h2>
+        <!--это самый древний способ повесить событие на элемент-->
         <h3 class="h3red">Событие на h3</h3>
         <h4 class="h4">Событие на h4</h4>
         <h5 class="h5">Событие addEventListener на h5</h5>
@@ -61,6 +62,8 @@
             <p><b>Task 4.</b></p>
             <p>Создайте блок div-4. И кнопку b-4. При нажатии кнопки - добавляйте событие ontouchstart на блок div-4.
                 При событии происходит вывод текста touch в out-4. </p>
+            
+            <button class="b-4">жмяк</button>
             <div class="div-4 block">4</div>
             <div class="out-4">
             </div>
