getting data from a form

--- a/03.data entry basics, working with input/index.html
+++ b/03.data entry basics, working with input/index.html
@@ -182,21 +182,161 @@
   <button class="btn"></button>
   <div class="text"></div> -->
 
-<!-- 14 -->
-<!-- <input type="text" value="77"> -->
+  <!-- 14 -->
+  <!-- <input type="text" value="77"> -->
 
-<!-- 15 -->
-<!-- <input type="text"> -->
+  <!-- 15 -->
+  <!-- <input type="text"> -->
 
-<!-- 16 -->
-<!-- <input type="number" class="one">
+  <!-- 16 -->
+  <!-- <input type="number" class="one">
 <input type="number" class="two">
 <button class="btn"></button>
 <div class="sum"></div> -->
 
-<!-- 17 -->
-<!-- <input type="text">
+  <!-- 17 -->
+  <!-- <input type="text">
 <button class="btn"></button> -->
+
+
+  <!-- JavaScript получаем данные из input, select, checkbox, range, radio, textarea, form-------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+
+  <button class="b-1">text</button>
+  <input type="text" class="i-1">
+  <div class="out-1">
+
+  </div>
+
+
+  <button class="b-2">number</button>
+  <input type="number" class="i-2">
+  <div class="out-2">
+
+  </div>
+
+
+  <button class="b-3">color</button>
+  <input type="color" class="i-3">
+  <div class="out-3">
+
+  </div>
+
+
+  <button class="b-4">date</button>
+  <input type="date" class="i-4">
+  <div class="out-4">
+
+  </div>
+
+
+  <button class="b-5">range</button>
+  <input type="range" class="i-5">
+  <div class="out-5">
+
+  </div>
+
+
+  <button class="b-6">checkbox</button>
+  <button class="b-6-1">Делаем checked по нажатию этой кнопки</button>
+  <input type="checkbox" class="i-6" id="i-6">
+  <label for="i-6">Сюда можно нажать</label>
+  <div class="out-6">
+
+  </div>
+
+
+  <button class="b-7">radio</button><br>
+  <input type="radio" class="i-7" id="i71" name="i-7" value="111">
+  <label for="i71">Сюда можно нажать 1</label>
+
+
+  <input type="radio" class="i-7" id="i72" name="i-7" value="222">
+  <label for="i72">Сюда можно нажать 2</label>
+
+
+  <input type="radio" class="i-7" id="i73" name="i-7" value="333">
+  <label for="i73">Сюда можно нажать 3</label>
+  <div class="out-7">
+
+  </div>
+
+
+  <button class="b-8">password</button>
+  <input type="password" class="i-8">
+  <div class="out-8">
+
+  </div>
+
+
+  <button class="b-9">email</button>
+  <input type="email" class="i-9">
+  <div class="out-9">
+
+  </div>
+
+
+
+  <button class="b-10">select</button>
+  <select class="s-10">
+    <option value="1">1 пункт</option>
+    <option value="2">2 пункт</option>
+    <option value="3">3 пункт</option>
+  </select>
+
+  <div class="out-10">
+
+  </div>
+
+
+
+  <button class="b-11">textarea</button>
+  <input type="textarea" class="i-11">
+  <div class="out-11">
+
+  </div>
+
+
+  <span>--------------------------- <br>
+    --------------------------- <br>
+    форма <br>
+    -------------------------------</span>
+  <form>
+    <div>
+      <input type="text" name="myinput">
+    </div>
+    <div>
+      <input type="checkbox" value="555" id="form-ch-1" name="mycheckbox">
+      <label for="form-ch-1">checkbox</label>
+    </div>
+    <div>
+      <div>
+        <input type="radio" id="form-radio-1" value="777" name="myradio" checked>
+        <label for="form-radio-1">radio 1</label>
+      </div>
+
+      <div>
+        <input type="radio" id="form-radio-2" value="888" name="myradio">
+        <label for="form-radio-2">radio 2</label>
+      </div>
+
+      <div>
+        <input type="radio" id="form-radio-3" value="999" name="myradio">
+        <label for="form-radio-3">radio 3</label>
+      </div>
+    </div>
+    <div>
+      <select name="myselect" id="">
+        <option value="1">Text 1</option>
+        <option value="2">Text 2</option>
+        <option value="3">Text 3</option>
+        <option value="4">Text 4</option>
+      </select>
+    </div>
+
+    <button type="submit">submit</button>
+
+
+  </form>
 
   <script src="js/script.js"></script>
 </body>
